--- a/mingrui-shop-parent/mingrui-shop-basics/pom.xml
+++ b/mingrui-shop-parent/mingrui-shop-basics/pom.xml
@@ -15,6 +15,7 @@
     <modules>
         <module>mingrui-shop-basics-eureka-server</module>
         <module>mingrui-shop-basics-zuul-server</module>
+        <module>mingrui-shop-basics-upload-server</module>
     </modules>
 
 </project>
