--- a/mingrui-shop-parent/mingrui-shop-commoms/pom.xml
+++ b/mingrui-shop-parent/mingrui-shop-commoms/pom.xml
@@ -11,6 +11,23 @@
 
     <artifactId>mingrui-shop-commoms</artifactId>
 
+    <dependencies>
+        <!--帮助开发人员快速生成API文档-->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.9.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.belerweb</groupId>
+            <artifactId>pinyin4j</artifactId>
+            <version>2.5.1</version>
+        </dependency>
+
+
+    </dependencies>
+
+
     <!--父级项目不需要打包所有packging的类型为pom-->
     <packaging>pom</packaging>
     <modules>
