--- a/mingrui-shop-parent/mingrui-shop-commoms/mingrui-shop-common-core/pom.xml
+++ b/mingrui-shop-parent/mingrui-shop-commoms/mingrui-shop-common-core/pom.xml
@@ -13,7 +13,13 @@
     <artifactId>mingrui-shop-common-core</artifactId>
 
     <dependencies>
-    <!--处理json与各种数据类型或文档类型的转换-->
+        <!-- SpringBoot-整合Web组件 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <!--处理json与各种数据类型或文档类型的转换-->
     <dependency>
         <groupId>com.google.code.gson</groupId>
         <artifactId>gson</artifactId>
