--- a/parent/basics/zuul-server/pom.xml
+++ b/parent/basics/zuul-server/pom.xml
@@ -10,6 +10,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>zuul-server</artifactId>
-
+    <dependencies>
+        <!-- zuul -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-zuul</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
