--- a/parent/service-api/pom.xml
+++ b/parent/service-api/pom.xml
@@ -34,11 +34,11 @@
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
         <!--引入common工程代码-->
-<!--        <dependency>-->
-<!--            <groupId>com.zwt</groupId>-->
-<!--            <artifactId>mingrui-shop-common-core</artifactId>-->
-<!--            <version>1.0-SNAPSHOT</version>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>com.zwt</groupId>
+            <artifactId>common-core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <!--分页工具-->
         <dependency>
             <groupId>com.github.pagehelper</groupId>
