--- a/parent/service-api/service-api-xxx/pom.xml
+++ b/parent/service-api/service-api-xxx/pom.xml
@@ -11,5 +11,19 @@
 
     <artifactId>service-api-xxx</artifactId>
 
+    <dependencies>
+        <!--帮助开发人员快速生成API文档-->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.9.2</version>
+        </dependency>
+        <!--提供可视化的API文档-->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.9.2</version>
+        </dependency>
 
+    </dependencies>
 </project>
