--- a/parent/service/pom.xml
+++ b/parent/service/pom.xml
@@ -43,6 +43,11 @@
             <artifactId>pagehelper-spring-boot-starter</artifactId>
             <version>1.2.10</version>
         </dependency>
+        <dependency>
+            <groupId>com.zwt</groupId>
+            <artifactId>service-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
 <!--        <dependency>-->
 <!--            <groupId>com.zwt</groupId>-->
