--- a/mingrui-shop-parent/mingrui-shop-service/pom.xml
+++ b/mingrui-shop-parent/mingrui-shop-service/pom.xml
@@ -15,6 +15,7 @@
     <modules>
         <module>mingrui-shop-service-xxx</module>
         <module>mingrui-shop-service-search</module>
+        <module>mingrui-shop-service-template</module>
     </modules>
     <dependencies>
         <!-- SpringBoot-整合Web组件 -->
